tests/baselines/reference/objectTypeLiteralSyntax2.errors.txt
objectTypeLiteralSyntax2.ts(12,22): error TS1005: ';' expected.


==== objectTypeLiteralSyntax2.ts (1 errors) ====
    var x: {
        foo: string,
        bar: string
    }
    
    // ASI makes this work
    var y: {
        foo: string
        bar: string
    }
    
    var z: { foo: string bar: string }
                         ~~~
!!! error TS1005: ';' expected.